[DEV] Add RoboFile

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,14 @@
     },
     "autoload" : {
         "psr-4" : {
-            "App\\DebugBundle\\": "src/DebugBundle"
+            "App\\": "src/"
         }
+    },
+    "require-dev": {
+        "consolidation/robo": "^1.1",
+        "henrikbjorn/lurker": "^1.2",
+        "patchwork/jsqueeze": "^2.0",
+        "natxet/CssMin": "^3.0",
+        "leafo/scssphp": "^0.7.1"
     }
 }
