--- a/app/config/menu.yml
+++ b/app/config/menu.yml
@@ -1,26 +1,27 @@
-# This file defines the menus on the website. See the documentation for
-# details: https://docs.bolt.cm/configuration/menus
-
 main:
-    - label: Home
-      title: This is the first menu item.
-      path: homepage
-      class: first
-    - label: Second item
-      path: entry/1
-      submenu:
-          - label: Sub 1
-            path: entry/2
-          - label: Sub 2
-            class: menu-item-class
-            path: entry/3
-          - label: Sub 3
-            path: entry/4
-          - label: Sub 4
-            class: sub-class
-            path: page/3
-    - label: All pages
-      path: pages/
-    - label: The Bolt site
-      link: http://bolt.cm
-      class: last
+    -
+        class: first
+        path: homepage
+        title: 'This is the first menu item.'
+        label: Home
+    -
+        path: entry/1
+        label: 'Second item'
+        submenu:
+            -
+                path: entry/2
+                label: 'Sub 1'
+            -
+                path: entry/3
+                class: menu-item-class
+                label: 'Sub 2'
+            -
+                path: entry/4
+                label: 'Sub 3'
+    -
+        path: pages/
+        label: 'All pages'
+    -
+        class: last
+        link: 'http://bolt.cm'
+        label: 'The Bolt site'
